优化临时人员的数据存储