@@ -1,5 +1,7 @@
 package com.itboyst.facedemo.controller;
 
+import com.arcsoft.face.toolkit.ImageFactory;
+import com.arcsoft.face.toolkit.ImageInfo;
 import com.itboyst.facedemo.domain.UserFaceInfo;
 import com.itboyst.facedemo.dto.*;
 import com.itboyst.facedemo.service.*;
@@ -7,12 +9,16 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
+import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.ResponseBody;
-import sun.misc.BASE64Encoder;
+import cn.hutool.core.codec.Base64;
 
+import javax.imageio.ImageIO;
 import javax.servlet.http.HttpSession;
+import java.awt.image.BufferedImage;
+import java.io.ByteArrayInputStream;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
@@ -54,6 +60,9 @@ public class ZtempuserController {
     @Autowired
     Ztraining_facilityService ztrinfser;
 
+    @Autowired
+    FaceEngineService faceEngineService;
+
     @RequestMapping(value = "/findAllztempuser", method = RequestMethod.POST)
     @ResponseBody
     public List<Ztempuser> findAllztempuser(HttpSession session) throws IOException {
@@ -64,28 +73,31 @@ public class ZtempuserController {
 
     @RequestMapping(value = "/addtempuser", method = RequestMethod.POST)
     @ResponseBody
-    public int  addtempuser(String zid,String authorityID,String zname) throws IOException {
+    public int  addtempuser(String zid,String authorityID,String zname) throws IOException, InterruptedException {
 
-
-       /* UserFaceInfo userFaceInfo = new UserFaceInfo();
-        userFaceInfo.setGroupId(groupId);
+        //存储临时人员的信息到人脸数据库中
+        Ztempuser ztempuser = ztempuserService.findByzid(zid);
+        String file = GetImageStr(ztempuser.getOriginalPictureUrl());
+        byte[] decode = Base64.decode(base64Process(file));
+        BufferedImage bufImage = ImageIO.read(new ByteArrayInputStream(decode));
+        ImageInfo imageInfo = ImageFactory.bufferedImage2ImageInfo(bufImage);
+        //人脸特征获取
+        byte[] bytes = faceEngineService.extractFaceFeature(imageInfo);
+        UserFaceInfo userFaceInfo = new UserFaceInfo();
+        userFaceInfo.setGroupId(101);
         userFaceInfo.setFaceFeature(bytes);
-        String path = "D:\\SchoolTrainFiles\\FacePic\\student\\" + System.currentTimeMillis() + ".jpg";
-        //从人脸表中查找自增键的值
+        //从人脸表中查找自增键的值作为face_id
         int num = userFaceInfoService.findAll();
         int number = num;
         String face_id = "L" + number;
         //用学号或工号与face表相连
         userFaceInfo.setFaceId(face_id);
-        userFaceInfo.setPath(path);
+        userFaceInfo.setPath(ztempuser.getOriginalPictureUrl());
         int e = userFaceInfoService.findcountfaceid(face_id);
         //通过工号查找到没有记录则添加一条记录;
         if (e <= 0) {
             userFaceInfoService.insertSelective(userFaceInfo);
-            GenerateImage(file, path);
         }
-*/
-        Ztempuser ztempuser = ztempuserService.findByzid(zid);
 
         String faceid=userFaceInfoService.selectfaceidbyfpath(ztempuser.getOriginalPictureUrl());
         int faceinfoid = userFaceInfoService.findidbyfaceid(faceid);
@@ -186,11 +198,22 @@ public class ZtempuserController {
             e.printStackTrace();
         }
         //对字节数组Base64编码
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(data);//返回Base64编码过的字节数组字符串
+        return Base64.encode(data);//返回Base64编码过的字节数组字符串
     }
 
+    private String base64Process(String base64Str) {
+        if (!StringUtils.isEmpty(base64Str)) {
+            String photoBase64 = base64Str.substring(0, 30).toLowerCase();
+            int indexOf = photoBase64.indexOf("base64,");
+            if (indexOf > 0) {
+                base64Str = base64Str.substring(indexOf + 7);
+            }
 
+            return base64Str;
+        } else {
+            return "";
+        }
+    }
 
 
 }
